# projekt1

./: ArrayList.cpp  ArrayList.h  CMakeLists.txt  efficiency_tests.cpp  search  wnioski.odt  zad2.cpp  zad2.h  zad3.cpp  zad3.h
include/: ArrayList.hpp  DoublyLinkedList.hpp  SinglyLinkedList.hpp
src/: ArrayList.cpp  DoublyLinkedList.cpp  SinglyLinkedList.cpp  app.cpp
tests/: app.cpp  efficiency_tests.cpp
